[package]
name = "ppm"
version = "0.1.0"
authors = ["Yanis AHRAS <a.yanis@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "src"
path = "src/main.rs"
crate-type = ["dylib"]

[dependencies]
cargo-benchcmp = "0.4.2"
cty = "0.2.1"
